--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="" type="" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Namdev</title>
-    <link rel="icon" type="image/jpeg" href="/src/assets/PCB_Logo.jpg" />
+    <link rel="icon" type="image/jpeg" href="" />
 
     <!-- Bootstrap CSS -->
     <link
